--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My HTML and CSS Template</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Gage's site</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+	<div class="container">
 
-	
-	<main>
-		<section>
-			<h2>About Us</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et enim vel ligula maximus semper. Sed pellentesque metus et velit bibendum, eu faucibus nulla efficitur.</p>
-		</section>
 		
-		<section>
-			<h2>Contact Us</h2>
-		</section>
-	</main>
-	
-
+		<main>
+			<section>
+				<h2>About Us</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et enim vel ligula maximus semper. Sed pellentesque metus et velit bibendum, eu faucibus nulla efficitur.</p>
+			</section>
+			
+			<section>
+				<h2>Contact Us</h2>
+			</section>
+		</main>
+		
+		
+	</div>
 </body>
 </html>
