--- a/essentials/index.html
+++ b/essentials/index.html
@@ -6,9 +6,8 @@
 </head>
 <body>
 	<div class="container">
+		<div class="overlay">
 
-		
-		<main>
 			<section>
 				<h2>About Us</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et enim vel ligula maximus semper. Sed pellentesque metus et velit bibendum, eu faucibus nulla efficitur.</p>
@@ -17,9 +16,9 @@
 			<section>
 				<h2>Contact Us</h2>
 			</section>
-		</main>
-		
-		
+			
+		</div>
 	</div>
+	<script src="script.js"></script>
 </body>
 </html>
