--- a/essentials/index.html
+++ b/essentials/index.html
@@ -7,9 +7,9 @@
 <body>
 	<div class="container">
 		<div class="overlay">
-
-			<section>
-				<h2>About Us</h2>
+	
+			<section class="fade-text">
+				<h1>About Us</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et enim vel ligula maximus semper. Sed pellentesque metus et velit bibendum, eu faucibus nulla efficitur.</p>
 			</section>
 			
