--- a/essentials/index.html
+++ b/essentials/index.html
@@ -9,7 +9,7 @@
 		<div class="overlay">
 	
 			<section class="fade-text">
-				<h1 class="typing">Hey, i'm Gage, a web-developer</h1>
+				<h1 class="typing">Hey, i'm Gage, <br> a web-developer</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et enim vel ligula maximus semper. Sed pellentesque metus et velit bibendum, eu faucibus nulla efficitur.</p>
 			</section>
 			
