--- a/essentials/index.html
+++ b/essentials/index.html
@@ -6,12 +6,24 @@
 </head>
 <body>
 	<div class="container">
-		<div class="overlay">
+		<nav>
+		  <ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Projects</a></li>
+			<li><a href="#">Contact</a></li>
+		  </ul>
+		</nav>
+
 	
-			<section class="fade-text">
-				<h1 class="typing">Hey, i'm Gage, <br> a web-developer</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et enim vel ligula maximus semper. Sed pellentesque metus et velit bibendum, eu faucibus nulla efficitur.</p>
-			</section>
+	<div class="overlay">
+		
+		<div class="fade-text">
+				<div class="typing">
+					<h3>Hey, I'm Gage, a front end Web designer</h3>
+				</div>
+			</div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et enim vel ligula maximus semper. Sed pellentesque metus et velit bibendum, eu faucibus nulla efficitur.</p>
 			
 			<section>
 				<h2>Contact Us</h2>
