--- a/essentials/index.html
+++ b/essentials/index.html
@@ -8,10 +8,10 @@
 	<div class="container">
 		<nav>
 		  <ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Projects</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="skills.html">Skills</a></li>
+			<li><a href="projects.html">Projects</a></li>
+			<li><a href="contact.html">Contact</a></li>
 		  </ul>
 		</nav>
 
@@ -20,14 +20,11 @@
 		
 		<div class="fade-text">
 				<div class="typing">
-					<h3>Hey, I'm Gage, a front end Web designer</h3>
+					<h3>I'm Gage,<br> a front end developer</h3>
 				</div>
 			</div>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et enim vel ligula maximus semper. Sed pellentesque metus et velit bibendum, eu faucibus nulla efficitur.</p>
 			
-			<section>
-				<h2>Contact Us</h2>
-			</section>
+			
 			
 		</div>
 	</div>
