--- a/essentials/skills.html
+++ b/essentials/skills.html
@@ -15,5 +15,16 @@
 			<li><a href="contact.html">Contact</a></li>
 		  </ul>
 		</nav>
+
+        <div class="overlay">
+		<div class="fade-text">
+				<div class="typing">
+					<h3>These are some of my skills</h3>
+				</div>
+			</div>
+			
+			
+			
+		</div>
 </body>
 </html>
