--- a/essentials/contact.html
+++ b/essentials/contact.html
@@ -3,6 +3,7 @@
 <head>
   <title>Gage's Skills</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="contact.css"
   <script src="script.js"></script>
 </head>
 <body>
@@ -15,5 +16,34 @@
 			<li><a href="contact.html">Contact</a></li>
 		  </ul>
 		</nav>
+
+        <div class="overlay">
+		<div class="fade-text">
+				<div class="typing">
+					<h3>Get In Touch</h3>
+				</div>
+        <div class="container2">
+    <!-- <h2>Contact Us</h2> -->
+    <form action="#" method="post">
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" required>
+      </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required>
+      </div>
+      <div class="form-group">
+        <label for="message">Message</label>
+        <textarea id="message" name="message" required></textarea>
+      </div>
+      <input type="submit" value="Submit">
+    </form>
+  </div>
+			</div>
+			
+			
+			
+		</div>
 </body>
 </html>
