fixed scroll / overlay
scrolling working with overlay

--- a/essentials/skills.html
+++ b/essentials/skills.html
@@ -19,8 +19,22 @@
         <div class="overlay">
 		<div class="fade-text">
 				<div class="typing">
-					<h3>These are some of my skills</h3>
+					<h3>Here are some skills</h3>
+                <div class="skill-container">
+
+                    <div class="skills">
+                        <h3 for="skills">Hard Skills</h3>
+                        <ul>
+                            <li>Html & Css</li>
+                            <li>Javascript</li>
+                            <li>React.Js</li>
+                            <li>mySql</li>
+                        </ul>  
+                    </div>
+                    
+                    <div class="skills"></div>
 				</div>
+            </div>
 			</div>
 			
 			
