--- a/essentials/index.html
+++ b/essentials/index.html
@@ -20,7 +20,8 @@
 		
 		<div class="fade-text">
 				<div class="typing">
-					<h3>I'm Gage,<br> a <span class="type"></span></h3>
+					<h3>I'm Gage, a<br></h3>
+					<h3><span class="type"></span></h3>
 				</div>
 			</div>
 			
@@ -33,7 +34,7 @@
 	<script>
 		var typed = new Typed('.type', {
 			strings: [
-				'Frontend Deveoloper',
+				'Frontend Developer',
 				'Lover ;)',
 				'Coomer'
 			],
