--- a/essentials/skills.html
+++ b/essentials/skills.html
@@ -23,7 +23,7 @@
                 <div class="skill-container">
 
                     <div class="skills">
-                        <h3 for="skills">Hard Skills</h3>
+                        <h3 class="bullets">Hard Skills</h3>
                         <ul>
                             <li>Html & Css</li>
                             <li>Javascript</li>
@@ -32,7 +32,15 @@
                         </ul>  
                     </div>
                     
-                    <div class="skills"></div>
+                    <div class="skills">
+                      <h3 style="color: rgb(235, 119, 18);">Soft Skills</h3>
+                        <ul>
+                            <li>Interpersonal Skills</li>
+                            <li>Javascript</li>
+                            <li>React.Js</li>
+                            <li>mySql</li>
+                        </ul> 
+                    </div>
 				</div>
             </div>
 			</div>
