--- a/essentials/index.html
+++ b/essentials/index.html
@@ -34,9 +34,9 @@
 	<script>
 		var typed = new Typed('.type', {
 			strings: [
-				'Frontend Developer',
-				'Lover ;)',
-				'Coomer'
+				'Web Developer',
+				' Front-End enthusiast',
+				'Programmer'
 			],
 			typeSpeed: 60,
 			backSpeed: 60,
