--- a/essentials/skills.html
+++ b/essentials/skills.html
@@ -20,7 +20,7 @@
 		<div class="fade-text">
 				<div class="typing">
 					<h3>Here are some skills</h3>
-                <div class="skill-container">
+                <!-- <div class="skill-container">
 
                     <div class="skills">
                         <h3 class="bullets">Hard Skills</h3>
@@ -40,7 +40,41 @@
                             <li>React.Js</li>
                             <li>mySql</li>
                         </ul> 
-                    </div>
+                    </div> -->
+     <div class="notecard-container">
+    <div class="notecard">
+      <div class="notecard-inner">
+        <div class="notecard-front">
+          <h2>Skills</h2>
+          <!-- <p>This is the front side of the notecard 1.</p> -->
+        </div>
+        <div class="notecard-back">
+          <h1 style="color: rgb(235, 119, 18); margin-top: -15px; font-size: 2vw;">Front End</h1>
+            <p style="padding-bottom: 4px; font-size: 1vw;">HTML & CSS</p>
+            <p style="padding-top: 4px; font-size: 1vw;">Javascript</p>
+            <p style="padding: 4px; font-size: 1vw;">React.JS</p>
+            <p style="padding: 4px; font-size: 1vw;">Bootstrap</p>
+          <h1 style="color: rgb(235, 119, 18); font-size: 2vw;">Backend</h1>
+            <p style="padding: 4px; font-size: 1vw;">MySql</p>
+          <!-- <p>This is the back side of the notecard 1.</p> -->
+        </div>
+      </div>
+    </div>
+    <div class="notecard">
+      <div class="notecard-inner">
+        <div class="notecard-front">
+          <h2>Soft Skills</h2>
+          <!-- <p>This is the front side of the notecard 2.</p> -->
+        </div>
+        <div class="notecard-back">
+          <h1 style="color: rgb(235, 119, 18); margin-top: -15px; font-size: 2vw;">My Skills</h1>
+            <p style="padding-bottom: 4px; font-size: 1vw;">Interpersonal Skills</p>
+            <p style="padding: 4px; font-size: 1vw;">Attention to Detail</p>
+            <p style="padding: 4px; font-size: 1vw;">Conflict Resolution</p>
+            <p style="padding-top: 4px; font-size: 1vw;">Propblem-Solving</p>
+            <p style="padding: 4px; font-size: 1vw;">Time Management</p>
+            <p style="padding: 4px; font-size: 1vw;">Adaptability</p>
+                    
 				</div>
             </div>
 			</div>
