from works and photo
form now  works and deletes after submission

--- a/essentials/skills.html
+++ b/essentials/skills.html
@@ -56,6 +56,7 @@
             <p style="padding: 4px; font-size: 1vw;">Bootstrap</p>
           <h1 style="color: rgb(235, 119, 18); font-size: 2vw;">Backend</h1>
             <p style="padding: 4px; font-size: 1vw;">MySql</p>
+            <p style="padding: 4px; font-size: 1vw;">Python</p>
           <!-- <p>This is the back side of the notecard 1.</p> -->
         </div>
       </div>
