--- a/essentials/contact.html
+++ b/essentials/contact.html
@@ -1,49 +1,67 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <title>Gage's Skills</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="contact.css"
-  <script src="script.js"></script>
+  <link rel="stylesheet" href="contact.css">
+
+  <script src="script.js" defer></script>
+  <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("KOX1uCGaE2LKEhDMi"); //public key
+   })();
+</script>
+
 </head>
 <body>
-    <div class="container">
-		<nav>
-		  <ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="skills.html">Skills</a></li>
-			<li><a href="projects.html">Projects</a></li>
-			<li><a href="contact.html">Contact</a></li>
+  <div class="container">
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
 		  </ul>
 		</nav>
-
-        <div class="overlay">
-		<div class="fade-text">
-				<div class="typing">
-					<h3>Get In Touch</h3>
+    
+    <div class="overlay">
+      <div class="fade-text">
+        <div class="typing">
+          <h3>Get In Touch</h3>
 				</div>
         <div class="container2">
-    <!-- <h2>Contact Us</h2> -->
-    <form action="#" method="post">
-      <div class="form-group">
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name" required>
-      </div>
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" required>
-      </div>
+          <!-- <h2>Contact Us</h2> -->
+          <form action="#"
+           method="post" id="emailForm" >
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input type="text"
+               id="name" 
+               name="from_name" required>
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="email"
+               id="email"
+              name="email_id" required>
+            </div>
       <div class="form-group">
         <label for="message">Message</label>
-        <textarea id="message" name="message" required></textarea>
+        <textarea 
+        id="message"
+        name="message"
+        required></textarea>
       </div>
       <input type="submit" value="Submit">
     </form>
   </div>
-			</div>
-			
-			
-			
-		</div>
+</div>
+
+</div>
+<!-- <script src="script.js"></script> -->
 </body>
 </html>
