--- a/essentials/index.html
+++ b/essentials/index.html
@@ -23,10 +23,14 @@
 					<h3>I'm Gage, a<br></h3>
 					<h3><span class="type"></span></h3>
 				</div>
-			</div>
+				<p>hello world</p>
+				<div class="partyGageProfile">
+					  <img src="partyGage.jpg" style="height:18vw; width: 15vw; border-radius:50%;box-shadow: 10px 5px 5px red;
+					  ">
+				</div>
 			
 		</div>
-
+		</div>
 		
 	</div>
 	<!-- <script src="typed.js"></script> -->
@@ -45,6 +49,6 @@
 
 		})
 	</script>
-	<!-- <script src="script.js"></script> -->
+
 </body>
 </html>
