--- a/essentials/index.html
+++ b/essentials/index.html
@@ -25,7 +25,8 @@
 				</div>
 				<p>hello world</p>
 				<div class="partyGageProfile">
-					  <img src="partyGage.jpg" style="height:18vw; width: 15vw; border-radius:50%;box-shadow: 10px 5px 5px red;
+					  <img src="partyGage.jpg" style="width: 10%; height:10%; border-radius:40%;
+					  box-shadow: 10px 5px 5px rgba(255, 255, 255, 0.541);
 					  ">
 				</div>
 			
