added some socials
instagram, github, and linkedin

--- a/essentials/contact.html
+++ b/essentials/contact.html
@@ -58,6 +58,23 @@
       </div>
       <input type="submit" value="Submit">
     </form>
+    <div class="socials">
+					<div class="instagram">
+						<a href="https://www.instagram.com/twelve_gage123.5/">
+							<img src="icons8-instagram-96.png" style="height: 5em; width: 5em">
+						</a>
+					</div>
+					<div class="linkedin">
+						<a href="https://www.linkedin.com/search/results/all/?fetchDeterministicClustersOnly=true&heroEntityKey=urn%3Ali%3Afsd_profile%3AACoAADlJt7YBlzACWUWOJLzgSnyeq4T7cRSAzqE&keywords=gage%20malmgren&origin=RICH_QUERY_SUGGESTION&position=0&searchId=1a2e4c69-7b6d-4339-b88a-c2ee233d53da&sid=%2CF6">
+							<img src="icons8-linkedin-96.png" style="height: 86px; width: 86px;">
+						</a>
+					</div>
+					<div class="github">
+							<a href="https://github.com/TheRageWithGage">
+								<img src="github-mark-white.png" style="height: 76px; width: 76px;">
+							</a>
+						</div>
+					</div>
   </div>
 </div>
 
