--- a/essentials/index.html
+++ b/essentials/index.html
@@ -23,11 +23,26 @@
 					<h3>I'm Gage, a<br></h3>
 					<h3><span class="type"></span></h3>
 				</div>
-				<p>hello world</p>
+				<div class="socials">
+					<div class="instagram">
+						<a href="https://www.instagram.com/twelve_gage123.5/">
+							<img src="icons8-instagram-96.png" style="height: 5em; width: 5em">
+						</a>
+					</div>
+					<div class="linkedin">
+						<a href="https://www.linkedin.com/search/results/all/?fetchDeterministicClustersOnly=true&heroEntityKey=urn%3Ali%3Afsd_profile%3AACoAADlJt7YBlzACWUWOJLzgSnyeq4T7cRSAzqE&keywords=gage%20malmgren&origin=RICH_QUERY_SUGGESTION&position=0&searchId=1a2e4c69-7b6d-4339-b88a-c2ee233d53da&sid=%2CF6">
+							<img src="icons8-linkedin-96.png" style="height: 86px; width: 86px;">
+						</a>
+					</div>
+					<div class="github">
+							<a href="https://github.com/TheRageWithGage">
+								<img src="github-mark-white.png" style="height: 76px; width: 76px;">
+							</a>
+						</div>
+					</div>
+				</div>
 				<div class="partyGageProfile">
-					  <img src="partyGage.jpg" style="width: 10%; height:10%; border-radius:40%;
-					  box-shadow: 10px 5px 5px rgba(255, 255, 255, 0.541);
-					  ">
+					 <img src="man.png">
 				</div>
 			
 		</div>
