--- a/essentials/projects.html
+++ b/essentials/projects.html
@@ -21,6 +21,12 @@
 				<div class="typing">
 					<h3>Here are some of my projects</h3>
 				</div>
+				<div class="projects">
+					<a href="index.html">
+						<img class="webPiano" src="piano.PNG" style="width: 500; height: 250px; border-radius:35px; padding: 15px; margin-right: 1em;">
+					</a>
+					<img class="webPiano" src="piano.PNG" style="width: 500; height: 250px; border-radius:35px; padding: 15px;">
+				</div>
 			</div>
 			
 			
