--- a/essentials/projects.html
+++ b/essentials/projects.html
@@ -22,10 +22,20 @@
 					<h3>Here are some of my projects</h3>
 				</div>
 				<div class="projects">
-					<a href="index.html">
-						<img class="webPiano" src="piano.PNG" style="width: 500; height: 250px; border-radius:35px; padding: 15px; margin-right: 1em;">
+					<a href="./Web-Piano-main/piano.html" target="_blank">
+						<img class="webPiano" src="piano.PNG" style="width: 35em; height: 250px; border-radius:35px; padding: 15px; margin-right: 1em;">
 					</a>
-					<img class="webPiano" src="piano.PNG" style="width: 500; height: 250px; border-radius:35px; padding: 15px;">
+					<a href="./validate/validation/assignment/validate.html" target="_blank">
+						<img class="webPiano" src="validate.PNG" style="width: 35em; height: 250px; border-radius:35px; padding: 15px;">
+					</a>
+				</div>
+				<div class="projects">
+					<a href="./slide-project/slides/project/slides.html" target="_blank">
+						<img class="webPiano" src="slides2.PNG" style="width: 35em; height: 250px; border-radius:35px; padding: 15px; margin-right: 1em;">
+					</a>
+					<a href="./pigGame/index.html" target="_blank">
+						<img class="webPiano" src="pigGame.PNG" style="width: 35em; height: 250px; border-radius:35px; padding: 15px; margin-right: 1em;">
+					</a>
 				</div>
 			</div>
 			
