--- a/essentials/projects.html
+++ b/essentials/projects.html
@@ -37,6 +37,14 @@
 						<img class="webPiano" src="pigGame.PNG" style="width: 35em; height: 250px; border-radius:35px; padding: 15px; margin-right: 1em;">
 					</a>
 				</div>
+				<div class="projects">
+					<a href="./jsClock/jsClock/analog_clock/clock.html" target="_blank">
+						<img class="webPiano" src="clock.PNG" style="width: 35em; height: 250px; border-radius:35px; padding: 15px; margin-right: 1em;">
+					</a>
+					<a href="./profileCards/profile.html" target="_blank">
+						<img class="webPiano" src="profileCards.PNG" style="width: 35em; height: 250px; border-radius:35px; padding: 15px; margin-right: 1em;">
+					</a>
+				</div>
 			</div>
 			
 			
